--- a/baloon.html
+++ b/baloon.html
@@ -4,10 +4,10 @@
   // Your code here
 
    let p = document.querySelector('p');
-    para.style.fontSize = '24px';
+    p.style.fontSize = '24px';
   
     window.addEventListener("keydown", event => {
-    var size = parseInt(para.style.fontSize, 10);
+    var size = parseInt(p.style.fontSize, 10);
     if (event.key == "ArrowUp") {
       size += 10;
     } else {
